# dssa_dw_final_project_OjhaAakash1

./: .config  .gitignore  123.py  LICENSE  README.md  clients.py  main.py  pyproject.toml  tasks.py
.github/: .flake8
env/: pyvenv.cfg
kans/: cli.py  exceptions.py  graph.py  logger.py  plotting.py  queues.py  scheduler.py  tasks.py  utils.py  workflows.py
kans/clients/: postgres.py
kans/executors/: base.py  default.py
kans/test/: test.py  test3.py
test.py/: test2.py
tools/: README.md  license  requirements.txt(all the library used)
